--- a/Population/.classpath
+++ b/Population/.classpath
@@ -2,11 +2,11 @@
 <classpath>
 	<classpathentry kind="src" path="src"/>
 	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER"/>
-	<classpathentry kind="lib" path="C:/Users/Fanchon et Julien/Desktop/ISIMA/eclipse-java-helios-SR1-win32-x86_64/lwjgl-2.8.1/jar/lwjgl.jar">
+	<classpathentry kind="lib" path="C:/Users/Julien/Desktop/EclipseFF/slick/lib/lwjgl.jar">
 		<attributes>
-			<attribute name="org.eclipse.jdt.launching.CLASSPATH_ATTR_LIBRARY_PATH_ENTRY" value="C:/Users/Fanchon et Julien/Desktop/ISIMA/eclipse-java-helios-SR1-win32-x86_64/lwjgl-2.8.1/native/windows"/>
+			<attribute name="org.eclipse.jdt.launching.CLASSPATH_ATTR_LIBRARY_PATH_ENTRY" value="C:/Users/Julien/Desktop/EclipseFF/slick/native/windows"/>
 		</attributes>
 	</classpathentry>
-	<classpathentry kind="lib" path="C:/Users/Fanchon et Julien/Desktop/ISIMA/eclipse-java-helios-SR1-win32-x86_64/slick.jar"/>
+	<classpathentry kind="lib" path="C:/Users/Julien/Desktop/EclipseFF/slick/lib/slick.jar"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
