Added behaviours and lands and points

--- a/Population/.classpath
+++ b/Population/.classpath
@@ -8,5 +8,11 @@
 		</attributes>
 	</classpathentry>
 	<classpathentry kind="lib" path="C:/Users/Julien/Desktop/EclipseFF/slick/lib/slick.jar"/>
+	<classpathentry kind="lib" path="C:/Users/Fanchon et Julien/Desktop/ISIMA/eclipse-java-helios-SR1-win32-x86_64/slick.jar"/>
+	<classpathentry kind="lib" path="C:/Users/Fanchon et Julien/Desktop/ISIMA/eclipse-java-helios-SR1-win32-x86_64/lwjgl-2.8.1/jar/lwjgl.jar">
+		<attributes>
+			<attribute name="org.eclipse.jdt.launching.CLASSPATH_ATTR_LIBRARY_PATH_ENTRY" value="C:/Users/Fanchon et Julien/Desktop/ISIMA/eclipse-java-helios-SR1-win32-x86_64/lwjgl-2.8.1/native/windows"/>
+		</attributes>
+	</classpathentry>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
