--- a/Population/.classpath
+++ b/Population/.classpath
@@ -8,5 +8,6 @@
 			<attribute name="org.eclipse.jdt.launching.CLASSPATH_ATTR_LIBRARY_PATH_ENTRY" value="C:/Users/Fanchon et Julien/Desktop/ISIMA/eclipse-java-helios-SR1-win32-x86_64/lwjgl-2.8.1/native/windows"/>
 		</attributes>
 	</classpathentry>
+	<classpathentry kind="con" path="org.eclipse.jdt.junit.JUNIT_CONTAINER/4"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
